Fixed the view recipe page to be responsive and readable on mobile.

--- a/website/static/main.css
+++ b/website/static/main.css
@@ -36,6 +36,12 @@
     display: none
 }
 
+.view_container {
+    display: grid;
+    grid-template-columns: 35% 1fr;
+    gap: 1rem;
+}
+
 @media only screen and (max-width: 480px) {
   /* For mobile phones: */
   .grid_container {
@@ -56,11 +62,22 @@
     grid-template-rows: auto;
   }
 
+  .view_container {
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: auto; 
+    gap: 1rem;
+}
+
   .hidden_cart {
     display: block;
   }
 
   .visible_cart {
+    display: none;
+  }
+
+  .view_card {
     display: none;
   }
 }
